# Cryptic

./: .gitignore  Cargo.toml  README.md
src/: basic.rs  benchmark.rs  main.rs
src/basic/: aes.rs  algorithms.rs  utils.rs
