[package]
name = "Cryptic"
version = "0.1.0"
edition = "2024"

[dependencies]
cli-prompts = "0.1.1"
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-rational = "0.4.2"
num-traits = "0.2.19"
rayon = "1.11.0"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.18"